# Heart-Disease

./: app.py  heart_disease.ipynb  knn_model.pkl  pyproject.toml  requirements.txt  scaling.pkl
templates/: home.html
