[tool.poetry]
name = "heart-disease"
version = "0.1.0"
description = ""
authors = ["diaby <kissimadrame72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
